--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node server/server.js",
+    "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
     "test-watch": "nodemon --exec 'npm test'"
   },
@@ -24,9 +24,13 @@
   "homepage": "https://github.com/RajaSattyam/mongo-learning#readme",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "crypto-js": "^3.1.6",
     "express": "^4.16.3",
+    "jsonwebtoken": "^7.1.9",
+    "lodash": "^4.15.0",
     "mongodb": "^2.2.5",
-    "mongoose": "^4.5.9"
+    "mongoose": "^4.5.9",
+    "validator": "^5.6.0"
   },
   "devDependencies": {
     "expect": "^1.20.2",
