--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lodash": "^4.15.0",
     "mongodb": "^2.2.5",
     "mongoose": "^4.5.9",
+    "redis": "^2.8.0",
     "validator": "^5.6.0"
   },
   "devDependencies": {
