--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/RajaSattyam/mongo-learning#readme",
   "dependencies": {
+    "assert": "^1.4.1",
     "bcryptjs": "^2.3.0",
     "body-parser": "^1.18.2",
     "crypto-js": "^3.1.6",
